--- a/css/style.css
+++ b/css/style.css
@@ -126,15 +126,19 @@ a:visited {text-decoration: none;}
 }
 
 
-.contact-section {
-	height: 500px;
-	padding-top: 100px;
-}
 .contact-section h1 {
+	margin-top: 100px;
 	text-align: center;
 	font-family: 'Sriracha', cursive;
 	color: #012E40;
 	text-align: center;
+}
+.contact-section .address {
+	margin-top: 50px;
+	margin-bottom: 200px;
+}
+.contact-section ul {
+	margin-top: 50px;
 }
 .contact-section li {
 	text-align: center;
