--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,11 @@ a:visited {text-decoration: none;}
 
 
 .top-menu{
+	width: 100%;
 	background-color: #012E40;
+	position:fixed;
+	display:inline-block;
+	top:0;
 }
 .top-menu ul {
 	overflow: hidden;
@@ -37,12 +41,12 @@ a:visited {text-decoration: none;}
 .main-section {
 	width: 100%;
 	height: 600px;
-	background-color: #a68d77;
+	/* background-color: #a68d77; */
 	text-align: center;
-	/*background-image:url("../img/about_background.png");
+	background-image:url("../img/about_background.png");
 	background-repeat:no-repeat;
 	background-position:center bottom;
-	background-size:cover;*/
+	background-size:cover;
 }
 .main-section h1, h2{
 	color: white;
