add Utterances comments

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -170,7 +170,15 @@
       </section>
     {% when "utterances" %}
       <h4 class="page__comments-title">{{ comments_label }}</h4>
-      <section id="utterances-comments"></section>
+      <section id="utterances-comments">
+        <script src="https://utteranc.es/client.js"
+          repo="akima9/akima9.github.io"
+          issue-term="url"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+        </script>
+      </section>
     {% when "giscus" %}
       <h4 class="page__comments-title">{{ comments_label }}</h4>
       <section id="giscus-comments"></section>
