--- a/_sass/minimal-mistakes/_mixins.scss
+++ b/_sass/minimal-mistakes/_mixins.scss
@@ -17,7 +17,7 @@
    ========================================================================== */
 
 @function em($target, $context: $doc-font-size) {
-  @return math.div($target, $context) * 1em;
+  @return ($target / $context) * 1em;
 }
 
 
