Add Google Adsense snippet

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,9 @@
 <!-- start custom head snippets -->
 
+<!-- insert google ad -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4654354718575198"
+     crossorigin="anonymous"></script>
+
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
