--- a/_sass/minimal-mistakes/skins/_default.scss
+++ b/_sass/minimal-mistakes/skins/_default.scss
@@ -3,3 +3,5 @@
    ========================================================================== */
 
 // Intentionally left blank
+$primary-color: #114e9e !default;
+$link-color: #114e9e !default;
