Add post & Add mermaid

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,10 @@
 <!-- start custom footer snippets -->
 
+<script>
+    mermaid.initialize({
+        startOnLoad:true,
+    });
+    window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+</script>
+
 <!-- end custom footer snippets -->
