--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -10,4 +10,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
 <link rel="manifest" href="/assets/site.webmanifest">
 
+<!-- insert mermaid cdn -->
+<script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+
 <!-- end custom head snippets -->
